k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthwatch
  labels:
    app.kubernetes.io/name: healthwatch-ne
    app.kubernetes.io/part-of: sih-25001
